simplify custom properties in .browser

--- a/src/styles/_browser.css
+++ b/src/styles/_browser.css
@@ -1,5 +1,5 @@
 .browser {
-    padding: 8px var(--container-padding) 10px;
+    padding: 8px 20px 10px;
     background-color: #EF5350;
     color: #FFFFFF;
     text-align: center;
