--- a/src/styles/_mfp.css
+++ b/src/styles/_mfp.css
@@ -8,8 +8,8 @@
 
 .mfp-container {
     display: inline-block;
-    padding-left: 8px;      /* horizontal spacing */
-    padding-right: 8px;     /* horizontal spacing */
+    padding-left: calc(var(--container-padding) / 2);      /* horizontal spacing */
+    padding-right: calc(var(--container-padding) / 2);     /* horizontal spacing */
     vertical-align: top;
     width: auto;
     min-width: 100%;
@@ -17,8 +17,8 @@
 }
 
 .mfp-content {
-    margin-top: 8px;        /* vertical spacing */
-    margin-bottom: 8px;     /* vertical spacing */
+    margin-top: calc(var(--container-padding) / 2);        /* vertical spacing */
+    margin-bottom: calc(var(--container-padding) / 2);     /* vertical spacing */
     text-align: center;
 }
 
