margin but at the index page

--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -23,8 +23,7 @@
         <![endif]-->
 
         <div class="container">
-            <h1>Hello, World!</h1>
-            <p>Foo, bar, baz.</p>
+            Hello, World!
             <a class="link mfp-handler" href="#login">Login</a>
         </div>
 
