--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -31,7 +31,7 @@
         </div>
 
 
-        <!-- Modal -->
+        <!-- .mfp -->
         <div class="window mfp-hide" id="login">
             <button class="window__close mfp-close" type="button">
                 Close
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        
+
         <script src="../vendors/jquery/jquery-3.2.1.min.js"></script>
         <script src="../vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
         <script src="../vendors/outline/outline.js"></script>
