--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,6 +13,8 @@
 @import url("_link.css");
 @import url("_wysiwyg.css");
 
+@import url("_label.css");
+
 @import url("_mfp.css");
 @import url("_window.css");
 @import url("_login.css");
