--- a/src/styles/_label.css
+++ b/src/styles/_label.css
@@ -2,8 +2,8 @@
     display: table; /* Make sure a line break happens after the label. This is needed in case it is used with a checkbox or a not-too-long input. */
     vertical-align: top;
     border-bottom: 8px solid transparent; /* "padding" won't work with table. Use border. */
-    font-weight: normal;
-    font-size: 16px;
+    font-weight: bold;
+    font-size: 18px;
     line-height: 24px;
-    color: #545454;
+    color: #333333;
 }
