--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,6 +15,7 @@
 
 @import url("_label.css");
 @import url("_hint.css");
+@import url("_danger.css");
 
 @import url("_mfp.css");
 @import url("_window.css");
