--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -42,10 +42,10 @@
     }
 
 
-.input--area {
+.input--textarea {
 
 }
-    .input--area .input__widget {
+    .input--textarea .input__widget {
         height: auto; /* user rows="" attribute to set a default height */
         min-height: 50px; /* 1 row */
         max-height: 266px; /* 10 rows */
