--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -36,7 +36,10 @@
 
 
 /* password */
-    .input__widget[type="password"]:not(:placeholder-shown) {
+.input--password {
+
+}
+    .input--password .input__widget:not(:placeholder-shown) {
         font-family: "Tahoma", sans-serif;
         letter-spacing: 3px;
     }
