--- a/src/styles/_helper.css
+++ b/src/styles/_helper.css
@@ -1,14 +1,14 @@
-.hint {
+.helper {
     padding-top: 6px;
     font-size: 14px;
     line-height: 20px;
     color: #7E7E7E;
 }
 
-.hint--output {
+.helper--output {
     color: var(--red);
 }
 
-.hint + .hint {
+.helper + .helper {
     padding-top: 4px;
 }
