--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,7 +14,7 @@
 @import url("_wysiwyg.css");
 
 @import url("_label.css");
-@import url("_hint.css");
+@import url("_helper.css");
 
 @import url("_mfp.css");
 @import url("_window.css");
