--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -40,28 +40,27 @@
     }
 
 
+/* Disabled */
+.input__widget:disabled,
+.input__widget:disabled:hover,
+.input__widget:disabled:focus {
+    opacity: 1;
+    border-color: var(--input-border);
+    background-color: #F6F6F6;
+    box-shadow: none;
+    color: var(--disabled-color);
+    cursor: default;
+}
 
-    .input__widget:disabled,
-    .input__widget:disabled:hover,
-    .input__widget:disabled:focus {
-        opacity: 1;
-        border-color: var(--input-border);
-        background-color: #F6F6F6;
-        box-shadow: none;
-        color: var(--disabled-color);
-        cursor: default;
-    }
-
-    .input__widget:disabled::placeholder {
-        color: var(--disabled-color);
-    }
+.input__widget:disabled::placeholder {
+    color: var(--disabled-color);
+}
 
 
-
+/* Error */
 .input--error {
 
 }
-
     .input--error .input__widget {
         color: var(--red);
         border-color: var(--red);
@@ -108,6 +107,17 @@ select.input__widget:focus {
     outline: auto; /* for keyboard navigation take it back */
 }
 
+/* Error */
+.input--error select.input__widget {
+    background-image: url("../vectors/select-error.svg");
+}
+
+.input--error select.input__widget:hover {
+    border-color: var(--red);
+}
+
+
+
 .input--placeholder-is-chosen {
 
 }
@@ -115,16 +125,11 @@ select.input__widget:focus {
         color: var(--placeholder-text-color);
     }
 
-    .input--placeholder-is-chosen .input__widget:disabled {
+    .input--placeholder-is-chosen select.input__widget:disabled {
         color: var(--disabled-color);
     }
 
+    .input--placeholder-is-chosen.input--error select.input__widget {
+        color: var(--red);
+    }
 
-.input--error select.input__widget {
-    background-image: url("../vectors/select-error.svg");
-    border-color: var(--red);
-    color: var(--red);
-}
-.input--error select.input__widget:hover {
-    border-color: var(--red);
-}
