--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -4,7 +4,7 @@
     border: none;
     padding: 13px 24px;
     min-width: 100px;
-    background-color: #F08080;
+    background-color: #0D7FC5;
     border-radius: 3px;
     font-family: inherit;
     font-size: 16px;
@@ -19,7 +19,7 @@
 }
 
 .button:hover {
-    background-color: #FC9191;
+    background-color: #2FA5ED;
 }
 
 
@@ -28,11 +28,24 @@
     transition: none;
 }
 
+.button:disabled,
+.button:disabled:hover,
+.button:disabled:active {
+    background-color: #F6F6F6;
+    color: var(--disabled-color);
+    translate: none;
+    cursor: default;
+}
 
 .button--secondary {
-    background-color: #99C6D4;
+    box-shadow: inset 0 0 0 1px #2FA5ED;
+    background-color: transparent;
+    color: #00559A;
 }
 
 .button--secondary:hover {
-    background-color: #A3D1E0;
+    background-color: #F3F9FF;
 }
+
+
+
