--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -5,7 +5,7 @@
     padding: 13px 24px;
     min-width: 100px;
     background-color: #0D7FC5;
-    border-radius: 3px;
+    border-radius: 4px;
     font-family: inherit;
     font-size: 16px;
     line-height: 24px;
@@ -38,9 +38,9 @@
 }
 
 .button--secondary {
-    box-shadow: inset 0 0 0 1px #2FA5ED;
+    box-shadow: inset 0 0 0 2px #0D7FC5;
     background-color: transparent;
-    color: #00559A;
+    color: #0D7FC5;
 }
 
 .button--secondary:hover {
