--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -2,12 +2,12 @@
 
 }
     .input__widget {
-        appearance: none;
+        /*appearance: none; !* not just for <select> appearance, but also for some details like box-shadow on iOS *!*/
         vertical-align: top;
         width: 100%;
         height: 50px;
         padding: 11px 22px;
-        background-color: #FFFFFF;
+        background-color: #FFFFFF; /* reset <select> background (appearance: none; doesn't help) */
         border: 2px solid var(--input-border);
         outline: none;
         border-radius: 4px;
@@ -38,6 +38,11 @@
     .input__widget[type="password"]:not(:placeholder-shown) {
         font-family: "Tahoma", sans-serif;
         letter-spacing: 2px;
+    }
+
+    .input__widget[type="color"] {
+        width: 100px;
+        padding: 4px 8px;
     }
 
 
