--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -2,12 +2,12 @@
 
 }
     .input__widget {
-        /*appearance: none; !* not just for <select> appearance, but also for some details like box-shadow on iOS *!*/
+        appearance: none; /* 1) appearance of <select>, 2) ability to us "box-shadow" on iOS, 3) rounded corners of type="search"  */
         vertical-align: top;
         width: 100%;
         height: 50px;
         padding: 11px 22px;
-        background-color: pink; /* reset <select> background (appearance: none; doesn't help) */
+        background-color: coral; /* reset <select> background (appearance: none; doesn't help) */
         border: 2px solid var(--input-border);
         outline: none;
         border-radius: 4px;
