--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -2,12 +2,12 @@
 
 }
     .input__widget {
-        appearance: none; /* 1) appearance of <select>, 2) ability to us "box-shadow" on iOS, 3) rounded corners of type="search"  */
+        appearance: none; /* 1) remove angle in <select> at the right , 2) ability to use "box-shadow" on iOS, 3) reset rounded corners of type="search"  */
         vertical-align: top;
         width: 100%;
         height: 50px;
         padding: 11px 22px;
-        background-color: coral; /* reset <select> background (appearance: none; doesn't help) */
+        background-color: #FFFFFF; /* reset <select> background (appearance: none; doesn’t help here) */
         border: 2px solid var(--input-border);
         outline: none;
         border-radius: 4px;
@@ -43,6 +43,14 @@
     .input__widget[type="color"] {
         width: 100px;
         padding: 4px 8px;
+    }
+
+    .input__widget[type="date"],
+    .input__widget[type="datetime-local"],
+    .input__widget[type="week"],
+    .input__widget[type="month"],
+    .input__widget[type="time"] {
+        width: auto;
     }
 
 
