--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -45,13 +45,13 @@
         padding: 4px 8px;
     }
 
-    .input__widget[type="date"],
-    .input__widget[type="datetime-local"],
-    .input__widget[type="week"],
-    .input__widget[type="month"],
-    .input__widget[type="time"] {
-        width: auto;
-    }
+    /*.input__widget[type="date"],*/
+    /*.input__widget[type="datetime-local"],*/
+    /*.input__widget[type="week"],*/
+    /*.input__widget[type="month"],*/
+    /*.input__widget[type="time"] {*/
+    /*    width: auto;*/
+    /*}*/
 
 
 /* Disabled */
