--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -15,6 +15,7 @@
         font-size: 16px; /* not less than 16px (otherwise mobile browsers will zoom in on focus) */
         line-height: 24px;
         color: #000000;
+        -webkit-tap-highlight-color: transparent;
         transition: background-color var(--transition-hover),
                     border-color var(--transition-hover);
     }
@@ -45,11 +46,11 @@
         padding: 4px 8px;
     }
 
-    /*.input__widget[type="date"],*/
-    /*.input__widget[type="datetime-local"],*/
-    /*.input__widget[type="week"],*/
-    /*.input__widget[type="month"],*/
-    /*.input__widget[type="time"] {*/
+    /*.input__widget[type="date"]::placeholder,*/
+    /*.input__widget[type="datetime-local"]::placeholder,*/
+    /*.input__widget[type="week"]::placeholder,*/
+    /*.input__widget[type="month"]::placeholder,*/
+    /*.input__widget[type="time"]::placeholder {*/
     /*    width: auto;*/
     /*}*/
 
