--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -46,6 +46,15 @@
         padding: 4px 8px;
     }
 
+    /* Either "appearance: none; width: 100%;" or "width: auto; to reset the width set above"   */
+    .input__widget[type="date"],
+    .input__widget[type="datetime-local"],
+    .input__widget[type="week"],
+    .input__widget[type="month"],
+    .input__widget[type="time"] {
+        width: auto;
+    }
+
 
 /* Disabled */
 .input__widget:disabled,
