--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -29,7 +29,7 @@
         border-color: var(--input-border-hover-and-focus);
     }
 
-    .input__widget:focus {
+    .input__widget:focus-visible {
         border-color: var(--input-border-hover-and-focus);
         box-shadow: 0 0 0 1px var(--input-border-hover-and-focus);
         transition: none;
