--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,6 @@
 @import url("../vendors/normalize/normalize.css");
 @import url("../vendors/magnific-popup/magnific-popup.css");
-@import url("_universal.css");
+@import url("_box-sizing.css");
 @import url("_visuallyhidden.css");
 @import url("_root.css");
 @import url("_html.css");
