--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -9,6 +9,7 @@
     --input-border: #B3B3B3;
     --input-border-hover-and-focus: #7E7E7E;
     --placeholder-color: #999999;
+    --disabled-background: #F6F6F6;
     --disabled-color: #999999;
     --error: #FF0033;
 }
