--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" itemscope itemtype="http://schema.org/[%type%]">
+<html lang="en" itemscope itemtype="https://schema.org/Thing">
     <head>
         <meta charset="utf-8">
         <title>[%title%]</title>
@@ -12,9 +12,11 @@
         <meta itemprop="description" content="[%description%]">
 
         <!-- ogp.me (facebook & vkontakte) -->
-        <meta property="og:type" content="[%og-type%]">
+        <meta property="og:type" content="website">
         <meta property="og:url" content="[%url%]">
         <meta property="og:image" content="[%img%]">
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="675">
         <meta property="og:title" content="[%title%]">
         <meta property="og:description" content="[%description%]">
         <meta property="fb:app_id" content="[%facebook-app-id%]">
@@ -84,7 +86,7 @@
         </div>
 
 
-        <script src="../vendors/jquery/jquery-3.7.0.min.js"></script>
+        <script src="../vendors/jquery/jquery-3.7.1.min.js"></script>
         <script src="../vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
         <script src="../scripts/_mfp.js"></script>
         <script src="../scripts/_input.js"></script>
