--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -3,8 +3,9 @@
     --body-font-size: 16px;
     --body-line-heigth: 24px;
     --ease-out-quint: cubic-bezier(0.22, 1, 0.36, 1);
-    --transition-hover: 0.1s ease;
-    --transition-show: 1.2s var(--ease-out-quint);
+    --transition-hover: 100ms ease;
+    --transition-show: 1200ms var(--ease-out-quint);
+    --image-fallback: #F3F5F4;
     --container-padding: 40px;
     --input-border: #B3B3B3;
     --input-border-hover-and-focus: #7E7E7E;
