--- a/src/styles/_body.css
+++ b/src/styles/_body.css
@@ -4,5 +4,5 @@ body {
     -webkit-font-smoothing: antialiased;
     font-family: var(--font);
     font-size: var(--body-font-size);
-    line-height: var(--body-line-heigth);
+    line-height: var(--body-line-height);
 }
