--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -93,7 +93,7 @@
 textarea.input__widget {
     height: auto; /* user rows="" attribute to set a default height */
     min-height: 50px; /* 1 row */
-    max-height: 266px; /* 10 rows */
+    max-height: calc(10*24px + 2*11px + 2*2px); /* rows + vertical paddings + vertical borders */
     resize: vertical;
 }
 
