--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,6 +10,7 @@
 
 @import url("_button.css");
 @import url("_input.css");
+@import url("_choice.css");
 @import url("_link.css");
 @import url("_wysiwyg.css");
 
