--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -4,7 +4,7 @@
     border: none;
     padding: 13px 24px;
     min-width: 100px;
-    background-color: #0D7FC5;
+    background-color: var(--action-color);
     border-radius: 4px;
     font-family: inherit;
     font-size: 16px;
@@ -19,7 +19,7 @@
 }
 
 .button:hover {
-    background-color: #2FA5ED;
+    background-color: var(--action-color-hover);
 }
 
 
@@ -38,9 +38,9 @@
 }
 
 .button--secondary {
-    box-shadow: inset 0 0 0 2px #0D7FC5;
+    box-shadow: inset 0 0 0 2px var(--action-color);
     background-color: transparent;
-    color: #0D7FC5;
+    color: var(--action-color);
 }
 
 .button--secondary:hover {
