--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -7,6 +7,8 @@
     --transition-show: 1200ms var(--ease-out-quint);
     --image-fallback: #F3F5F4;
     --container-padding: 40px;
+    --action-color: #0D7FC5;
+    --action-color-hover: #2FA5ED;
     --input-border: #B3B3B3;
     --input-border-hover-and-focus: #7E7E7E;
     --placeholder-color: #999999;
