--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,12 +8,12 @@
 @import url("_browser.css");
 @import url("_container.css");
 
+@import url("_nobr.css");
+@import url("_link.css");
 @import url("_button.css");
 @import url("_input.css");
 @import url("_choice.css");
-@import url("_link.css");
 @import url("_wysiwyg.css");
-
 @import url("_label.css");
 @import url("_helper.css");
 
