--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,6 +9,8 @@
 @import url("_container.css");
 
 @import url("_nobr.css");
+@import url("_hide-scrollbar.css");
+
 @import url("_link.css");
 @import url("_button.css");
 @import url("_input.css");
