--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -44,7 +44,7 @@
 
         <!-- assets -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="../styles/styles.css">
 
     </head>
     <body>
